# flask_project_template

./: .gitignore  Dockerfile  README.md  makefile  manage.py  pyproject.toml  run_celery_worker.py  setup.cfg  tox.ini
project/: __init__.py  config.py
project/apis/: __init__.py
project/apis/alive/: api.py
project/apis/sample/: crud.py  handlers.py  models.py  tasks.py  views.py
project/utils/: autentication.py  authentication.py  celery_utils.py
