[tool.poetry]
name = "Sample"
version = "0.1.0"
description = "Sample Flask Project."
authors = ["Mehadi Hasan Shuvo <hasanshuvo.dev@gmail.com>"]
readme = "README.md"
license = "Proprietary"
packages = [
    { include = "project" }
]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.2"
flask-restx = "^1.3.0"
Flask-Cors = "^4.0.0"
gunicorn = "^21.2.0"
PyJWT = "^2.8.0"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
pytest-cov = "^3.0.0"
flake8 = "^7.0.0"
black = "^24.2.0"
isort = "^5.13.2"
tox = "^4.14.1"
bandit = "^1.7.8"
safety = "^3.0.1"
dlint = "^0.14.1"
pep8-naming = "^0.13.3"
flake8-bugbear = "^24.2.6"
flake8-builtins = "^2.2.0"

[tool.pytest.ini_options]
addopts = "-p no:warnings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
